SLW-328 | Fixed missing search icon on mobile.
+ cleanup is header DOM and CSS.

--- a/themes/custom/c2d_theme/sass/5.components/_components.navigation.scss
+++ b/themes/custom/c2d_theme/sass/5.components/_components.navigation.scss
@@ -7,44 +7,18 @@
  * @package: navigation
  */
 
-#block-dislaw-theme-primary-local-tasks {
-  @include width-1105;
-}
-
 .social-block {
   @include flex;
   @include align-items(center);
   img {
     width: 2.4rem;
     height: 2.4rem;
-  }
-  .tiktok img,
-  .youtube img {
-    height: 1.6rem;
-    width: auto;
-    margin-top: .3rem;
-    margin-left: .3rem;
+    @include breakpoint(medium down) {
+      margin-right: 1.5rem;
+    }
   }
   .bordered-button {
     padding: 1.4rem 5.1rem;
-  }
-
-  @include breakpoint(medium down) {
-    &.desktop {
-      display: none;
-    }
-    &.mobile {
-      @include flex-direction(column);
-      justify-content: center;
-      .social-block-icons {
-        margin-bottom: 2rem;
-      }
-    }
-  }
-  @include breakpoint(tablet) {
-    &.mobile {
-      display: none;
-    }
   }
 }
 
@@ -55,49 +29,7 @@
   @include breakpoint(tablet) {
     display: none;
   }
-  .site-search {
-    svg {
-      margin-top: .6rem;
-      margin-right: 1.5rem;
-      fill: rgba($body-font-color, .65);
-    }
-  }
 }
-
-#block-dislaw-theme-main-menu {
-  @include breakpoint(medium down) {
-    @include flex;
-    @include flex-direction(column);
-    @include justify-content(flex-start);
-    @include transition(right, .2s);
-    position: fixed;
-    top: 0;
-    right: -100%;
-    bottom: 0;
-    padding-top: 7.8rem;
-    background-color: $color-white;
-    width: 100%;
-    .bordered-button {
-      @include align-self(center);
-      padding: 1.4rem 5.1rem;
-    }
-    .close-menu {
-      position: absolute;
-      top: 5rem;
-      right: 1.5rem;
-    }
-    &.open {
-      right: 0;
-    }
-  }
-  @include breakpoint(tablet) {
-    .close-menu,
-    .bordered-button {
-      display: none;
-    }
-  }
-}
-
 
 .menu--main {
   >.menu {
@@ -149,8 +81,6 @@
       span {
         @include transition(color, .2s);
         &:hover {
-          //color: white;
-          //background-color: $body-font-color;
           @include breakpoint(medium) {
             transition: .2s;
             color: $color-white ;
@@ -186,13 +116,6 @@
           justify-content: center;
           align-items: center;
         }
-/*        &.is-active {
-          color: $color-secondarye;
-          @include breakpoint(tablet) {
-            color: $color-white;
-            background-color: $color-blue-darkest;
-          }
-        }*/
       }
       &.menu-item--active-trail {
         color: $color-white ;
@@ -203,8 +126,6 @@
         }
         >span,
         >a {
-          //color: $body-font-color;
-          //background-color: white;
           color: $color-white ;
           background-color: $body-font-color;
           @include breakpoint(medium) {
@@ -406,7 +327,6 @@ li.menu-item.menu-item--expanded.opened span {
   }
 }
 
-
 .block-about-branches {
   .block-inner {
     .menu {
@@ -456,38 +376,5 @@ body.fixed {
     width: 100%;
     z-index: 100;
     box-shadow: 0 0 10px rgba($body-font-color, .3);
-  }
-}
-
-#block-dislaw-theme-breadcrumbs {
-  .block-inner {
-    @include width-1105;
-  }
-  .breadcrumb {
-    margin-top: 3rem;
-    ol {
-      @include flex;
-      @include flex-wrap(wrap);
-      list-style: none;
-      li {
-        margin-right: 1rem;
-        a {
-          @include transition(color, .2s);
-          &:hover {
-            color: $color-secondary;
-          }
-        }
-        &:after {
-          content: '/';
-          margin-left: .5rem;
-        }
-        &:last-child {
-          margin-right: 0;
-          &:after {
-            content: '';
-          }
-        }
-      }
-    }
   }
 }
